# pharokka

./: .gitignore  .readthedocs.yaml  .readthedocs.yaml.yml  .travis.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  PX14_3_C.fasta  README.md  README.rst  VERSION.py  aro_index.tsv  build.sh  environment.yml  environment_167.yml  global_variables.py  install_databases.py  meta.yaml  mkdocs.yml  phrokka.py  pyproject.toml  requirements.txt  requirements_dev.txt  run_pharokka_and_phold.ipynb  run_pharokka_and_phold_and_phynteny.ipynb  setup.cfg  setup.py  test_phage.fasta  text.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml  release.yaml
accessory/: __init__.py
databases/CARD/: CARD-Download-README.txt  aro_categories.tsv  aro_categories_index.tsv  aro_index.tsv  card.tar.bz2  nucleotide_fasta_protein_knockout_model.fasta  nucleotide_fasta_protein_overexpression_model.fasta  nucleotide_fasta_protein_variant_model.fasta  nucleotide_fasta_rRNA_gene_variant_model.fasta  protein_fasta_protein_homolog_model.fasta  protein_fasta_protein_knockout_model.fasta  protein_fasta_protein_overexpression_model.fasta  protein_fasta_protein_variant_model.fasta  shortname_antibiotics.tsv  shortname_pathogens.tsv  snps.txt
databases/CARD_mmseqs/: CARD  CARD.index  CARD.lookup  CARD_h  CARD_h.index
databases/vfdb/: vfdb.index  vfdb.lookup  vfdb_h.index
docs/: Makefile  benchmarking.md  changelog.md  citation.md  conf.py  custom.md  index.md  index.rst  install.md  installation.rst  make.bat  output.md  plotting.md  proteins.md  reasons.md  requirements.txt  run.md  usage.rst
fastas/: APTC-SA-2.fasta  APTC-SA-4.fasta  e_coli_dna_phage.fa
lib/: citation.py  databases.py  external_tools.py  hmm.py  input_commands.py  install_databases.py  pharokka_plotter.py  plot.py  post_processing.py  processes.py  proteins.py  util.py
modules/: databases.py  environment.yml  input_commands.py  post_processing.py  processes.py
other_files/: CONTRIBUTING.rst  HISTORY.rst  README.rst  environment.yml  setup.py
outp/: cds_functions.tsv  cleaned_phanotate.tsv  final_merged_output.tsv  input_fasta_delim.fasta  length_gc.tsv  mmseqs_results.tsv  phanotate_aas.fasta  phanotate_out.fasta  phanotate_out.txt  phrokka.gff  phrokka.tbl  phrokka_summary.txt  top_hits_hhsuite.tsv  top_hits_mmseqs.tsv
outp/hhsuite_target_dir/: hhsuite_tsv_file.ffdata  hhsuite_tsv_file.ffindex  results_tsv_file.ffdata  results_tsv_file.ffindex  results_your_seq_VS_phrogs.ffdata  results_your_seq_VS_phrogs.ffindex
outp/mmseqs/: results_mmseqs.0  results_mmseqs.1  results_mmseqs.2  results_mmseqs.3  results_mmseqs.4  results_mmseqs.5  results_mmseqs.6  results_mmseqs.7  results_mmseqs.index
output/: cleaned_phanotate.tsv  final_merged_output.tsv  hhsuite_tsv_file.ffdata  mmseqs_results.tsv  phannotate.gff  phannotate.tbl  phanotate_aas.fasta  phanotate_out.fasta  phanotate_out.txt  phrokka.gff  phrokka.tbl  phrokka.txt  top_hits.tsv  top_hits_hhsuite.tsv  top_hits_mmseqs.tsv  trnascan_out.gff  trnascan_out.txt  tsv_file.ffindex
output/hhsuite_target_dir/: hhsuite_tsv_file.ffindex  results_tsv_file.ffdata  results_tsv_file.ffindex  results_your_seq_VS_phrogs.ffdata  results_your_seq_VS_phrogs.ffindex
output/hmmsuite_target_dir/: results_your_seq_VS_phrogs.ffdata  results_your_seq_VS_phrogs.ffindex  your_multifasta.ffdata
output/mmseqs/: results_mmseqs.0  results_mmseqs.1  results_mmseqs.2  results_mmseqs.3  results_mmseqs.4  results_mmseqs.5  results_mmseqs.6  results_mmseqs.7  results_mmseqs.index
phrokka/: __init__.py  cli.py
prokka-env/: pyvenv.cfg
scripts/: convert_genbank.py  create_hmms.py
src/: pharokka_scripts.py
src/pharokka/: __init__.py  cli.py  create_custom_hmm.py  custom_db.py  databases.py  external_tools.py  hmm.py  input_commands.py  install.py  multiplot_entry.py  plot.py  plot_entry.py  post_processing.py  processes.py  proteins.py  run.py  run_pyrodigal_gv.py  util.py
test/: phanotate_aas.fasta  phanotate_out.fasta  pharokka.genbank  pharokka.gff  pharokka.tbl  pharokka_cds_functions.tsv  pharokka_final_merged_output.tsv  pharokka_length_gc.tsv
test2/: mmseqs_results.tsv  phannotate.gff  phannotate.tbl  phanotate_aas.fasta  top_hits.tsv  trnascan_out.gff
test2/mmseqs/: results_mmseqs.0  results_mmseqs.1  results_mmseqs.2  results_mmseqs.3  results_mmseqs.4  results_mmseqs.5  results_mmseqs.6  results_mmseqs.7  results_mmseqs.index
test_data/: Biggiephage_A_fullcontig_CasΦ1.fasta  Biggiephage_B_fullcontig_CasΦ2.fasta  NC_004617.fasta  NC_051700.fasta
test_data/Meta_example/: fake_meta.fa
test_data/stop_recoding/table_4/: SRR1747055_scaffold_7.fa
tests/: __init__.py  compare_outputs.py  conftest.py  generate_golden.py  golden_cases.py  run_comparison.sh  run_overall.sh  test_compat_entrypoints.py  test_external_commands.py  test_functions.py  test_golden.py  test_input_commands.py  test_overall.py  test_phrokka.py  test_post_processing.py  test_proteins.py
tests/test_data/custom_db/: microvirus.h3m
tests/test_data/functions_files/: good.fasta
tmp/: latest
tmp/10432832370022573275/: pref_0.0  pref_0.1  pref_0.2  pref_0.3  pref_0.4  pref_0.5  pref_0.6  pref_0.7  pref_0.index
tmp/12856158005084406773/: pref_0.0  pref_0.1  pref_0.2  pref_0.3  pref_0.5  pref_0.6  pref_0.7  pref_0.index
tmp/14377634878287724744/: pref_0.0  pref_0.1  pref_0.2  pref_0.3  pref_0.4  pref_0.5  pref_0.6  pref_0.7  pref_0.index
tmp/15125362023611719968/: pref_0.0  pref_0.1  pref_0.2  pref_0.3  pref_0.4  pref_0.5  pref_0.6  pref_0.7  pref_0.index
tmp/16597433778838835456/: pref_0.0  pref_0.1  pref_0.2  pref_0.3  pref_0.4  pref_0.5  pref_0.6  pref_0.7  pref_0.index
tmp/5239511781561765821/: pref_0.0  pref_0.1  pref_0.2  pref_0.3  pref_0.4  pref_0.5  pref_0.6  pref_0.7  pref_0.index
tmp/7020489969541240670/: pref_0.0  pref_0.1  pref_0.2  pref_0.3  pref_0.4  pref_0.5  pref_0.6  pref_0.7  pref_0.index
tmp/8875582524982702673/: pref_0.0  pref_0.1  pref_0.2  pref_0.3  pref_0.4  pref_0.5  pref_0.6  pref_0.7  pref_0.index
(+173 files in other folders)
